border collapse fixed

--- a/src/ui/czi-table.css
+++ b/src/ui/czi-table.css
@@ -10,7 +10,7 @@
  }
 .ProseMirror table {
   border: 1px solid var(--czi-table-border-color);
-  border-collapse: initial;
+  border-collapse:collapse;
   border-spacing: 0;
   border: none;
   margin: 0;
